examples/bad/reflect_nested_map_field.mko
// EXPECT: reflect_value_of expects a POD struct
// Nested struct with map field is non-POD for reflect_value_of.
struct Inner {
    m: map[string]int
}

struct Outer {
    i: Inner
    n: int
}

fn main() {
    let inn = Inner { m: make(map[string]int) }
    let o = Outer { i: inn, n: 1 }
    let _ = reflect_value_of(o)
}
